crates/batchalign/src/cli/snapshots/batchalign__cli__doctor_cmd__tests__host_facts_report_with_warning_apple_silicon.snap
---
source: crates/batchalign/src/cli/doctor_cmd.rs
expression: report
---
{
  "detected": {
    "os": "mac_os",
    "arch": "arm64",
    "cpu_logical_count": 12,
    "cpu_physical_count": 8,
    "ram_total_mb": 65536,
    "ram_available_mb": 32768,
    "gpu": {
      "kind": "apple_mps",
      "functional_for_batchalign": false,
      "reason_excluded": "apple_silicon_kernel_deadlock"
    },
    "disk_free_mb_for_cache": 500000,
    "hostname": "test-host",
    "detection_timestamp": "2023-11-14T22:13:20.000Z",
    "detection_warnings": []
  },
  "effective": {
    "gpu_thread_pool_size": 4,
    "force_cpu": true,
    "max_total_workers": 10,
    "max_concurrent_jobs": 4,
    "memory_gate_mb": 2048,
    "max_workers_per_key_gpu": 4,
    "max_workers_per_key_stanza": 5,
    "max_workers_per_key_io": 1,
    "audit": {
      "gpu_thread_pool_size": {
        "effective": 4,
        "recommended": 1,
        "override": 4,
        "redundant": false
      },
      "force_cpu": {
        "effective": true,
        "recommended": true,
        "override": null,
        "redundant": false
      },
      "max_total_workers": {
        "effective": 10,
        "recommended": 10,
        "override": null,
        "redundant": false
      },
      "max_concurrent_jobs": {
        "effective": 4,
        "recommended": 4,
        "override": null,
        "redundant": false
      },
      "memory_gate_mb": {
        "effective": 8000,
        "recommended": 8000,
        "override": null,
        "redundant": false
      },
      "max_workers_per_key": {
        "effective": 4,
        "recommended": 4,
        "override": null,
        "redundant": false
      }
    }
  },
  "validation": {
    "warnings": [
      "gpu_thread_pool_size=4 on a host with no functional GPU; recommended value is 1. The configured threads will contend for one CPU-bound model process without parallelism gain. Set `gpu_thread_pool_size: 1` in server.yaml or omit the field to use the host-aware recommendation."
    ],
    "errors": []
  }
}
